--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       NEXT_TELEMETRY_DISABLED: "1"
       PORT: 3000
     restart: always
+    networks:    # Add this section
+      - frontend-network  # Connect the frontend to this network
 
 networks:
   frontend-network:
