update frontend network

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,5 @@ services:
       NEXT_TELEMETRY_DISABLED: "1"
       PORT: 3000
     restart: always
-    networks:    # Add this section
-      - frontend-network  # Connect the frontend to this network
-
-networks:
-  frontend-network:
-    name: frontend-network
+    networks:   
+      - voyavox-network
