--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "motion": "^12.9.2",
     "next": "14.2.28",
     "react": "^18",
     "react-dom": "^18",
