--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "14.2.28",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
